@@ -1,3 +1,8 @@
+Summary of important user-visible changes for Windows 1.6.0+
+------------------------------------------------------------
+
+* Allow passing optional paramters to methods (Bug #60098)
+
 Summary of important user-visible changes for Windows 1.6.0
 ------------------------------------------------------------
 
